# realtime-trains-py

./: .gitignore  LICENSE.md  README.md  SECURITY.md  TODO.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml
JSONs/: G54071_on_2024.11.21_service_data.json  KNGX_on_2024.11.21_arr_board_data.json
authentication/: getAuthDetails.py
examples/: adv_nor_example.py  adv_nor_test.py  adv_pre_example.py  adv_pre_test.py  complex_example.py  get_live_example.py  sim_nor_example.py  sim_pre_example.py  simple_example.py
realtime_trains_py_data/: W32898_on_2026.05.26_service_data.json  X51363_on_2026.05.23_service_data.json  example-G54071_on_2024.11.21_service_data.json  example-KNGX_on_2024.11.21_arr_board_data.json  example_KGX_on_2026.05.23_dep_board_data.json
services/: serviceData.py
src/: __init__.py
src/authentication/: .env  getAuthDetails.py
src/main/: main.py
src/realtime_trains_py/: __init__.py
src/realtime_trains_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/realtime_trains_py/internal/: boards.py  details.py  error_handlers.py  errors.py  live_board.py  merge_sort.py  services.py  stat_boards.py  utilities.py
src/realtime_trains_py/services/: boardData.py  board_data.py  boards.py  merge_sort.py  serviceData.py  service_data.py  services.py  stat_boards.py  utilities.py
src/services/: serviceData.py
