[project]
name = "realtime-trains-py"
version = "2025.3.3"
authors = [
  { name="anonymous44401", email="anonymous4401.ad@gmail.com" },
]
description = "Python API Wrapper Package for the Realtime Trains API."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "requests>=2.32.3",
  "tabulate>=0.9.0",
]

[project.urls]
Repository = "https://github.com/realtime-trains-lang/realtime-trains-py"
Issues = "https://github.com/realtime-trains-lang/realtime-trains-py/issues"
Discord = "https://discord.gg/8xcXSGhBAR"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
