[project]
name = "realtime-trains-py"
version = "2027.1.1b1"
description = "Python API Wrapper for the Realtime Trains API"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"

keywords = [
    "api",
    "api wrapper",
    "realtime trains",
    "train data",
    "train API",
    "UK rail",
    "railway data",
    "train tracking",
    "train schedules",
    "trains",
    "railway",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "requests>=2.32.3",
  "tabulate>=0.9.0",
]

[project.urls]
Repository = "https://github.com/realtime-trains-lang/realtime-trains-py"
Documentation = "https://github.com/realtime-trains-lang/realtime-trains-py/wiki"
Issues = "https://github.com/realtime-trains-lang/realtime-trains-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
